[package]
name = "slog-journald"
version = "1.0.0"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
description = "Journald drain for slog-rs"
keywords = ["slog", "logging", "log", "journald", "systemd"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-journald"
homepage = "https://github.com/slog-rs/journald"
repository = "https://github.com/slog-rs/journald"
readme = "README.md"

[dependencies]
slog = "1.1.0"
libc = "0.2"
libsystemd-sys = "0.0"
