[package]
name = "slog-journald"
version = "2.0.0"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
description = "Journald drain for slog-rs"
keywords = ["slog", "logging", "log", "journald", "systemd"]
categories = ["development-tools::debugging"]
license = "MPL-2.0/MIT/Apache-2.0"
documentation = "https://docs.rs/slog-journald"
homepage = "https://github.com/slog-rs/journald"
repository = "https://github.com/slog-rs/journald"
readme = "README.md"

[badges]
travis-ci = { "repository" = "slog-rs/journald" }

[dependencies]
slog = "2.0.4"
libc = "0.2"
libsystemd-sys = "0.0"
